[package]
name = "moonshot"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moonshot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.31.0", features = ["metadata"] }
once_cell = "1.19.0"

[dev-dependencies]
proptest = "1.0"
